Details
-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.0
-
Symbian
-
2a6298bcf29104a4258992c7357a031f4ca9cc7f
Description
Copy and Cut actions do not appear in fullscreen VKB menu when a QML TextEdit or TextInput element is focused and has selected text. This happens because input method queries for cursor and anchor position in QCoeFepInputContext::CcpuCanCut() return zero in this case. It is probably related to focus changes when the options menu pops up.